@@ -1,9 +1,10 @@
 libnvidia-container (1.10.0~rc.1-1) experimental; urgency=medium
 
+  * Ignore pending MIG mode when checking if a device is MIG enabled
   * [WSL2] Fix bug where /dev/dxg is not mounted when NVIDIA_DRIVER_CAPABILITIES does not include "compute"
   * [WSL2] Fix segmentation fault on WSL2s system with no adpaters present (e.g. /dev/dxg missing)
 
- -- NVIDIA CORPORATION <cudatools@nvidia.com> Thu, 24 Mar 2022 11:25:07 +0200
+ -- NVIDIA CORPORATION <cudatools@nvidia.com>  Thu, 24 Mar 2022 11:25:07 +0200
 
 libnvidia-container (1.9.0-1) UNRELEASED; urgency=medium
 
